Fix subfields datatype alignment

--- a/assets/styles/mappingContainer.scss
+++ b/assets/styles/mappingContainer.scss
@@ -86,6 +86,10 @@
 	position: relative;
 	overflow: auto;
 	height: 100%;
+	background: #fff;
+	@media screen and (max-width: 768px) {
+	    padding-bottom: 80px;
+	}
 	.singleProperty {
 		margin-bottom: 15px;
 		border: 1px solid darken($bg, 5%);
